Set min-height of cd-word to avoid page shift when text is on two rows

--- a/assets/animated-headline/css/style.css
+++ b/assets/animated-headline/css/style.css
@@ -85,6 +85,7 @@ Primary style
 .cd-words-wrapper {
   display: inline-block;
   position: relative;
+  min-height: 60px;
 }
 .cd-words-wrapper b {
   display: inline-block;
